--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,19 +9,9 @@ spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 
 
-upload.path=/home/konstantin/
+upload.path=build/img/origin
 
 spring.jpa.hibernate.ddl-auto=update
-#photo properties
-app.static-root=build
-app.static-root.folders=img,js,css
-app.picture.folder.origin=build/img/origin
-app.picture.quality=0.9
-app.picture.folders-resized-dimensions=build/img/w200x150,200,150;\
-  static/img/w280x,280,-1;\
-  static/img/w600x600,600,600
-#
-app.comment.count=10
-app.post-per-page=10
+
 
 server.error.whitelabel.enabled=false
